# dcfilter

./: .gitignore  CMakeLists.txt  README.md  build-gcc-12.sh  conanfile.txt
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  dcfilter.c
src/bit_array/: CMakeLists.txt  bit_array.c  bit_array.h
tests/: CMakeLists.txt  bit_test.cpp  long_cycle.in  long_cycle.ref  runtests.cmake  simple.in  three.in  three.ref  three_cycles.in  three_cycles.ref  three_cycles_complicated.in  three_cycles_complicated.ref  three_cycles_complicated_d.ref  three_d.ref  two_cycles.in  two_cycles.ref  two_cycles_d.ref
